--- a/packages/nr-metadata/nr_metadata/translations/cs/LC_MESSAGES/messages.po
+++ b/packages/nr-metadata/nr_metadata/translations/cs/LC_MESSAGES/messages.po
@@ -3763,8 +3763,8 @@ msgid ""
 "File addition, removal or modification are not allowed after you have "
 "published your draft."
 msgstr ""
-"Přidávání, odstraňování nebo úpravy souborů nejsou povoleny poté, co "
-"jstepublikoval váš koncept."
+"Přidávání, odstraňování nebo úpravy souborů nejsou povoleny poté, co jste "
+"publikoval váš koncept."
 
 msgid "If you wish to upload files, you must<1>save</1>your draft first."
 msgstr "Chcete-li nahrát soubory, musíte nejprve <1>uložit</1> svůj koncept."
