fixed identifiers validation

--- a/packages/nr-metadata/nr_metadata/translations/cs/LC_MESSAGES/messages.po
+++ b/packages/nr-metadata/nr_metadata/translations/cs/LC_MESSAGES/messages.po
@@ -3915,3 +3915,6 @@ msgstr "Doporučené"
 
 msgid "All"
 msgstr "Všechny"
+
+msgid "Both identifier and identifier type must be filled."
+msgstr "Musí být vyplněn identifikátor i typ identifikátoru."
