--- a/packages/nr-metadata/nr_metadata/translations/en/LC_MESSAGES/messages.po
+++ b/packages/nr-metadata/nr_metadata/translations/en/LC_MESSAGES/messages.po
@@ -1779,3 +1779,9 @@ msgstr ""
 
 msgid "Both identifier and identifier type must be filled."
 msgstr ""
+
+msgid "Year must be a number."
+msgstr ""
+
+msgid "Year must be in format YYYY."
+msgstr ""
