using sui loader

--- a/packages/nr-metadata/nr_metadata/translations/cs/LC_MESSAGES/messages.po
+++ b/packages/nr-metadata/nr_metadata/translations/cs/LC_MESSAGES/messages.po
@@ -3936,3 +3936,6 @@ msgstr "Soubor nebyl správně nahrán. Smažte jej a zkuste to znovu."
 
 msgid "Status"
 msgstr "Stav"
+
+msgid "Fetching files"
+msgstr "Získávání souborů"
