refactored licenses to use descriptions

--- a/packages/nr-metadata/nr_metadata/translations/cs/LC_MESSAGES/messages.po
+++ b/packages/nr-metadata/nr_metadata/translations/cs/LC_MESSAGES/messages.po
@@ -3939,3 +3939,12 @@ msgstr "Stav"
 
 msgid "Fetching files"
 msgstr "Získávání souborů"
+
+msgid "Search in ROR database"
+msgstr "Vyhledávání v databázi ROR"
+
+msgid "Read more."
+msgstr "Přečtěte si více."
+
+msgid "Remove keyword"
+msgstr "Odebrat klíčové slovo"
