--- a/packages/nr-metadata/nr_metadata/translations/en/LC_MESSAGES/messages.po
+++ b/packages/nr-metadata/nr_metadata/translations/en/LC_MESSAGES/messages.po
@@ -1806,3 +1806,12 @@ msgstr ""
 
 msgid "Fetching files"
 msgstr ""
+
+msgid "Search in ROR database"
+msgstr ""
+
+msgid "Read more."
+msgstr ""
+
+msgid "Remove keyword"
+msgstr ""
