--- a/packages/nr-metadata/nr_metadata/translations/cs/LC_MESSAGES/messages.po
+++ b/packages/nr-metadata/nr_metadata/translations/cs/LC_MESSAGES/messages.po
@@ -3948,3 +3948,6 @@ msgstr "Přečtěte si více."
 
 msgid "Remove keyword"
 msgstr "Odebrat klíčové slovo"
+
+msgid "Find more records by this organization"
+msgstr "Vyhledat další záznamy této organizace"
