--- a/packages/nr-metadata/nr_metadata/translations/cs/LC_MESSAGES/messages.po
+++ b/packages/nr-metadata/nr_metadata/translations/cs/LC_MESSAGES/messages.po
@@ -3951,3 +3951,14 @@ msgstr "Odebrat klíčové slovo"
 
 msgid "Find more records by this organization"
 msgstr "Vyhledat další záznamy této organizace"
+
+#: /home/dusanst/Projects/nr-model/packages/nr-metadata/nr_metadata/documents/services/records/facets.py:484
+msgid "syntheticFields/defenseYear.label"
+msgstr ""
+
+#: /home/dusanst/Projects/nr-model/packages/nr-metadata/nr_metadata/documents/services/records/facets.py:502
+msgid "syntheticFields/year.label"
+msgstr ""
+
+msgid "Add project/financing information"
+msgstr "Přidat projekt/informaci o financování"
